08-kuber/05/deployment/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  selector:
    app: backend
  ports:
    - name: backend
      protocol: TCP
      port: 1180
      targetPort: 1180
